[gd_scene load_steps=8 format=3 uid="uid://ca3nwlpg546ew"]

[ext_resource type="Script" path="res://data/enemies/scout.gd" id="1_5fw7w"]
[ext_resource type="Texture2D" uid="uid://bbunbwhjml2ri" path="res://image/enemies/scout.png" id="1_8c1kt"]
[ext_resource type="Shader" path="res://data/enemies/scout.gdshader" id="2_356g4"]
[ext_resource type="AudioStream" uid="uid://bbhsd24xac3ia" path="res://audio/solid_impact.ogg" id="4_vjtkn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jtovy"]
resource_local_to_scene = true
shader = ExtResource("2_356g4")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/alpha = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ttet4"]
radius = 45.1774

[sub_resource type="CircleShape2D" id="CircleShape2D_ajvoq"]
radius = 815.074

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_5fw7w")

[node name="ScoutImage" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_jtovy")
position = Vector2(37, 27)
rotation = 1.5708
texture = ExtResource("1_8c1kt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ttet4")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_ajvoq")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Gun_1" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(114, -26)

[node name="Gun_2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(124, 9)

[node name="Timers" type="Node" parent="."]

[node name="LaserTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HitTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vjtkn")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Timers/HitTimer" to="." method="_on_hit_timer_timeout"]
